force-app/main/default/objects/Last_Exchange_Rate__c/Last_Exchange_Rate__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Last Exchange Rate</label>
</CustomObject>