force-app/main/default/objects/Last_Exchange_Rate__c/fields/AUD__c.field-meta.xml
<CustomField>
    <fullName>AUD__c</fullName>
    <label>AUD</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>