force-app/main/default/objects/Last_Exchange_Rate__c/fields/CAD__c.field-meta.xml
<CustomField>
    <fullName>CAD__c</fullName>
    <label>CAD</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>