force-app/main/default/objects/Last_Exchange_Rate__c/fields/EUR__c.field-meta.xml
<CustomField>
    <fullName>EUR__c</fullName>
    <label>EUR</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>