force-app/main/default/objects/Last_Exchange_Rate__c/fields/GBP__c.field-meta.xml
<CustomField>
    <fullName>GBP__c</fullName>
    <label>GBP</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>