force-app/main/default/objects/Last_Exchange_Rate__c/fields/ILS__c.field-meta.xml
<CustomField>
    <fullName>ILS__c</fullName>
    <label>ILS</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>