force-app/main/default/objects/Last_Exchange_Rate__c/fields/Latest_Update__c.field-meta.xml
<CustomField>
    <fullName>Latest_Update__c</fullName>
    <description>מעיד על מועד ביצוע הריצה ולא על מועד תוקף הנתונים
מועד תוקף הנתונים נגזר מתקינות הריצות של מנגנון שערי ההמרה</description>
    <label>Latest Update</label>
    <type>Date</type>
</CustomField>