force-app/main/default/objects/Last_Exchange_Rate__c/fields/PLN__c.field-meta.xml
<CustomField>
    <fullName>PLN__c</fullName>
    <label>PLN</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>