force-app/main/default/objects/Last_Exchange_Rate__c/fields/SGD__c.field-meta.xml
<CustomField>
    <fullName>SGD__c</fullName>
    <label>SGD</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>