force-app/main/default/objects/Last_Exchange_Rate__c/fields/USD__c.field-meta.xml
<CustomField>
    <fullName>USD__c</fullName>
    <label>USD</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>